--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
   <meta name="description" content="We provide Visitor Management Software Services for Industries and Complexes.">
-  <meta name="keywords" content="visitor management, visitor software, manage your visitors">
+  <meta name="keywords" content="visitor management, visitor software, manage your visitors, startup">
   <meta name="author" content="Cynosure Technologies">
   <meta property="og:title" content="Adithi - Hospitality Delivered"/>
   <meta property="og:site_name" content="Adithi - Cynosure Technologies"/>
